# nomigrate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/nomigrate/openssl/: sha.h
src/: sha.c  sha224.c  sha_cng.c  sha_sha224.c
test/: test-sha.cpp
